Disable effective usage analysis